syntax = "proto3";
import "google/protobuf/any.proto";

option java_multiple_files = true;
option java_package = "com.rean";
package com.rean;

message Customer {
  int32 customer_id = 1;
  string username = 2;
  string gender = 3;
  string location = 4;
  string contact = 5;
}

message Product {
  int32 product_id = 1;
  string name = 2;
  double price = 3;
  int32 customer_id = 4;
}

service CustomerService {
  //unary - synchronous
  //client will send one request and server will respond with one response.
  rpc getCustomer(Customer) returns(Customer){}

  //bi-directional streaming - Asynchronous
  //client will send stream of request and server will respond with stream of response.
  rpc getCustomerByLocation(stream Customer) returns (stream Customer) {}
}

service ProductService {

  //unary - synchronous
  //client will send one request and server will respond with one response.
  rpc getProduct(Product) returns(Product){}

  //sever streaming - Asynchronous
  //client will send one request and server will send stream of response to the client.
  rpc getProductsByCustomers(Customer) returns(stream Product){}

  //client streaming - Asynchronous
  //client will stream of request and server will respond with one response.
  rpc filterProductHighPrice(stream Product) returns(Product){}
}